--- a/Calculator/Calculator/Components/EncodingComponent.razor.css
+++ b/Calculator/Calculator/Components/EncodingComponent.razor.css
@@ -65,3 +65,19 @@ td, th {
     text-align: left;
     padding: 8px;
 }
+
+.node {
+    min-width: 100px;
+    max-width: fit-content;
+    height: fit-content;
+    border: 1px solid black;
+    font-size: 20px;
+    margin: 5px auto;
+    text-align:center;
+    padding: 5px;
+}
+
+.box {
+    display: flex;
+    align-items: stretch;
+}
